--- a/index.html
+++ b/index.html
@@ -52,54 +52,74 @@
         <a href="#" class="view en">VIEW MORE <i class="fa-solid fa-arrow-right"></i></a>
       </div>
     </section>
-<!-- end section main -->
-<section class="about"> 
-  <div class="title en">
-    <h2>ABOUT ICT Company.</h2>
-      <p>
-        대한민국 대표 IT기업 ICT Company를 소개합니다.</p>
-    
-  </div>
-  <ul class="sub-container clearfix">
-    <li>
-      <a href="#">
-        <div class="img-box">
-          <img src="./img/about_1.jpg" alt="회사소개">
+    <!-- end section main -->
+    <section class="about">
+      <div class="title en">
+        <h2>ABOUT ICT Company.</h2>
+        <p>
+          대한민국 대표 IT기업 ICT Company를 소개합니다.</p>
+
+      </div>
+      <ul class="sub-container clearfix">
+        <li>
+          <a href="#">
+            <div class="img-box">
+              <img src="./img/about_1.jpg" alt="회사소개">
+            </div>
+            <div class="text">
+              <h3>회사소개</h3>
+              <p>삶의 가치를 높이는 기업, ICT Company</p>
+              <p class="more">more</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <div class="img-box">
+              <img src="./img/about_2.jpg" alt="중앙연구소">
+            </div>
+            <div class="text">
+              <h3>중앙연구소</h3>
+              <p>설립 이래 한결 같은 자세로 기술 개발에 전념해 오고 있습니다.</p>
+              <p class="more">more</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <div class="img-box">
+              <img src="./img/about_3.jpg" alt="투자정보">
+            </div>
+            <div class="text">
+              <h3>투자정보</h3>
+              <p>ICT Company의 주요 경영사항을 제공합니다.</p>
+              <p class="more">more</p>
+            </div>
+          </a>
+        </li>
+      </ul>
+    </section>
+    <!-- end section.about -->
+    <!-- section.innovation -->
+    <section class="innovation">
+      <div class="title">
+        <h2 class="en">OUR PRODUCT innovations.</h2>
+        <p>끊임없는 기술 혁신으로 미래 성장 동력을 지속 발굴합니다.</p>
+      </div>
+      <div class="sub-container img-box">
+        <div class="inner">
+          <h3 class="en">01. Chlorinated Polyvinyl Chloride</h3>
+          <div class="bottom clearfix">
+            <p>
+              우리 회사는 국내에서 처음으로 자체 기술로 CPVC를 생산하는 데 성공하고 2017년 울산 2공장에 연산 3만톤 규모의
+              공장을 건설해 생산 중입니다.
+            </p>
+            <a href="#">제품상세보기</a>
+          </div>
         </div>
-        <div class="text">
-          <h3>회사소개</h3>
-          <p>삶의 가치를 높이는 기업, ICT Company</p>
-          <p class="more">more</p>
-        </div>
-      </a>
-    </li>
-    <li>
-      <a href="#">
-        <div class="img-box">
-          <img src="./img/about_2.jpg" alt="중앙연구소">
-        </div>
-        <div class="text">
-          <h3>중앙연구소</h3>
-          <p>설립 이래 한결 같은 자세로 기술 개발에 전념해 오고 있습니다.</p>
-          <p class="more">more</p>
-        </div>
-      </a>
-    </li>
-    <li>
-      <a href="#">
-        <div class="img-box">
-          <img src="./img/about_3.jpg" alt="투자정보">
-        </div>
-        <div class="text">
-          <h3>투자정보</h3>
-          <p>ICT Company의 주요 경영사항을 제공합니다.</p>
-          <p class="more">more</p>
-        </div>
-      </a>
-    </li>
-  </ul>
-</section>
-<!-- end section.about -->
+      </div>
+    </section>
+    <!-- end section.innovation -->
   </div>
 </body>
 
