--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
             <li><a href="#">제품검색<i class="fa-solid fa-magnifying-glass"></i></a></li>
           </ul>
         </nav>
+        <!-- 태블릿, 모바일 햄버거 메뉴 버튼 -->
+        <nav class="gnb-mobile">
+          <a href="#">
+            <i class="fas fa-bars"></i>
+          </a>
+        </nav>
       </div>
     </header>
     <!-- end header-->
@@ -57,7 +63,7 @@
       <div class="title en">
         <h2>ABOUT ICT Company.</h2>
         <p>
-          대한민국 대표 IT기업 ICT Company를 소개합니다.</p>
+          대한민국 대표 IT기업 <br class="mo">ICT Company를 소개합니다.</p>
 
       </div>
       <ul class="sub-container clearfix">
@@ -80,7 +86,7 @@
             </div>
             <div class="text">
               <h3>중앙연구소</h3>
-              <p>설립 이래 한결 같은 자세로 기술 개발에 전념해 오고 있습니다.</p>
+              <p>설립 이래 한결 같은 자세로<br class="mo"> 기술 개발에 전념해 오고 있습니다.</p>
               <p class="more">more</p>
             </div>
           </a>
@@ -111,8 +117,9 @@
           <h3 class="en">01. Chlorinated Polyvinyl Chloride</h3>
           <div class="bottom clearfix">
             <p>
-              우리 회사는 국내에서 처음으로 자체 기술로 CPVC를 생산하는 데 성공하고 2017년 울산 2공장에 연산 3만톤 규모의
-              공장을 건설해 생산 중입니다.
+              우리 회사는 국내에서 처음으로<br class="mo"> 자체 기술로 CPVC를 생산하는 데<br class="mo"> 성공하고 2017년 울산 2공장에<br class="mo"> 연산
+              3만톤 규모의
+              공장을 건설해<br class="mo"> 생산 중입니다.
             </p>
             <a href="#">제품상세보기</a>
           </div>
@@ -143,15 +150,15 @@
           <ul class="in">
             <li class="clearfix">
               <em>Challenge</em>
-              <p>기존의 틀에 안주하지 않고 변화와 혁신을 통해 최고를 추구하는 도전적인 사람</p>
+              <p>기존의 틀에 안주하지 않고 변화와 혁신을 통해<br class="mo"> 최고를 추구하는 도전적인 사람</p>
             </li>
             <li class="clearfix">
               <em>Dedication</em>
-              <p>회사, 고객, 동료와의 인연을 소중히 여기고 큰 목표를 위해 혼신의 힘을 다하는 헌신적인 사람</p>
+              <p>회사, 고객, 동료와의 인연을 소중히 여기고<br class="mo"> 큰 목표를 위해 혼신의 힘을 다하는 헌신적인 사람</p>
             </li>
             <li class="clearfix">
               <em>Intergrity</em>
-              <p>자긍심을 바탕으로 원칙에 따라 바르고 공정하게 행동하는 정도의 사람</p>
+              <p>자긍심을 바탕으로 원칙에 따라<br class="mo"> 바르고 공정하게 행동하는 정도의 사람</p>
             </li>
           </ul>
           <a href="#" class="more">more <span><i class="fa fa-chevron-right"></i></span></a>
@@ -203,21 +210,21 @@
     <!-- footer -->
     <footer>
       <div class="inner clearfix">
-          <h2 class="ft-logo"><img src="./img/logo.jpg" alt="ft-logo"></h2>
-          <ul class="address">
-              <li>서울특별시 마포구 한국ICT 인재개발원</li>
-              <li class="en">Copyright 2023.</li>
-          </ul>
-          <ul class="list">
-              <li><a href="#">온라인 구매시스템</a></li>
-              <li><a href="#">고객문의</a></li>
-              <li><a href="#">공지사항</a></li>
-              <li><a href="#">개인정보처리방침</a></li>
-              <li><a href="#">FAMILY SITE</a></li>
-          </ul>
+        <h2 class="ft-logo"><img src="./img/logo.jpg" alt="ft-logo"></h2>
+        <ul class="address">
+          <li>서울특별시 마포구 한국ICT 인재개발원</li>
+          <li class="en">Copyright 2023.</li>
+        </ul>
+        <ul class="list">
+          <li><a href="#">온라인 구매시스템</a></li>
+          <li><a href="#">고객문의</a></li>
+          <li><a href="#">공지사항</a></li>
+          <li><a href="#">개인정보처리방침</a></li>
+          <li><a href="#">FAMILY SITE</a></li>
+        </ul>
       </div>
-  </footer>
-  <!-- end footer -->
+    </footer>
+    <!-- end footer -->
   </div>
 </body>
 
